@@ -39,6 +39,9 @@ Trunk (not yet released)
     AVRO-1295. Java: Fix printing of a non-null namespace within a
     null namespace. (cutting)
 
+    AVRO-1300. Java: Fix generated copy constructors to copy field
+    values. (Christophe Taton via cutting)
+
 Avro 1.7.4 (22 February 2012)
 
   NEW FEATURES
